--- a/package.json
+++ b/package.json
@@ -3,18 +3,15 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "worker": "node server.js worker"
+    "start": "node server.js"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
-    "cloudinary": "^1.35.2",
+    "cloudinary": "^1.34.0",
     "csv-parse": "^5.4.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1",
-    "node-fetch": "^3.3.2",
     "pg": "^8.11.0",
     "uuid": "^9.0.0"
   }
